--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Debug environment
+        run: |
+          whoami
+          pwd
+          ls -la
+          docker --version
+          docker-compose --version
+
       - name: Stop existing containers
         run: docker-compose down || true
 
